and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------*

12-02-2015, MK,  tag emdna-V10-00-65
- G4ITReaction: Remove "gAll" introduced for testing
- G4ITModelProcessor: Remove "assert" introduced for testing
- G4ITTransportation: Remove extra parenthesis in the undef of PrepareState 

11-02-2015, MK
- Fix reproductibility of the chemistry module
- Fix the "no reaction table found" bug: G4ITReaction class created
- G4shared_ptr refers to std::shared_ptr when C++11 is activated

16-01-2015, SI
- added Fe56 into G4DNARuddIonisationExtendedModel

14-12-2014, MK
- BornIonisation: correct array cleaning
- ScreenRutherfordElastic: correct retrieval of water density 

12-12-2014, G.Cosmo,  tag emdna-V10-00-64
- Explicitly initialise to zero TLS pointers in G4KDNode.hh and G4ITFinder.icc
  to allow for compilation on Linux/clang-3.5.

05-12-2014, G.Cosmo
- Corrected sources.cmake in management and molecules/management, to
  include missing files:
    G4ITTransportationManager.icc
    G4KDNode.icc
    G4KDTree.icc
    G4MoleculeFinder.hh

01-12-2014, MK,  tag emdna-V10-00-63
- Temporary fix for avoiding bad relocation of Brownian particles
It slows the computation by forcing the Brownian particles to stop at the volumes' boundaries
- Transform fStopAndAlive to fStopAndKill in G4DNABrownianTransportation
  when the particle has reached a boundary

28-11-2014, MK, tag emdna-V10-00-62
- Retag

28-11-2014, MK, tag emdna-V10-00-61
- Fix chemistry initialization in standalone
- Fix Brownian navigation
- Some fixes related to scheduler
- Rename macro commands to reflect usage of scheduler
- Enhance comments

24-11-2014, MK, tag emdna-V10-00-60